--- a/user_center_frontend/package.json
+++ b/user_center_frontend/package.json
@@ -64,6 +64,7 @@
     "react-dom": "^17.0.0",
     "react-helmet-async": "^1.2.0",
     "react-router": "^4.3.1",
+    "serve": "^14.2.1",
     "umi": "^3.5.0"
   },
   "devDependencies": {
