--- a/tack-out/sky-take-out/sky-common/pom.xml
+++ b/tack-out/sky-take-out/sky-common/pom.xml
@@ -49,5 +49,15 @@
             <groupId>com.github.wechatpay-apiv3</groupId>
             <artifactId>wechatpay-apache-httpclient</artifactId>
         </dependency>
+        <dependency>
+            <groupId>name.finsterwalder</groupId>
+            <artifactId>fileutils</artifactId>
+            <version>1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.pityka</groupId>
+            <artifactId>fileutils_2.12</artifactId>
+            <version>1.2.5</version>
+        </dependency>
     </dependencies>
 </project>
