--- a/tack-out/sky-take-out/sky-pojo/pom.xml
+++ b/tack-out/sky-take-out/sky-pojo/pom.xml
@@ -23,5 +23,15 @@
             <groupId>com.github.xiaoymin</groupId>
             <artifactId>knife4j-spring-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>name.finsterwalder</groupId>
+            <artifactId>fileutils</artifactId>
+            <version>1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.pityka</groupId>
+            <artifactId>fileutils_2.12</artifactId>
+            <version>1.2.5</version>
+        </dependency>
     </dependencies>
 </project>
