--- a/tack-out/sky-take-out/sky-server/pom.xml
+++ b/tack-out/sky-take-out/sky-server/pom.xml
@@ -43,8 +43,6 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-
-
         </dependency>
 
 
@@ -128,6 +126,12 @@
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.github.pityka</groupId>
+            <artifactId>fileutils_2.12</artifactId>
+            <version>1.2.5</version>
         </dependency>
     </dependencies>
 
