实现菜品管理,删除,修改,查找等功能

--- a/tack-out/sky-take-out/sky-server/src/main/resources/application.yml
+++ b/tack-out/sky-take-out/sky-server/src/main/resources/application.yml
@@ -19,6 +19,11 @@ spring:
     url: jdbc:mysql://localhost:3306/sky_take_out
     username: root
     password: 123123123
+  redis:
+    database: 0
+    password:
+    host: localhost
+    port: 6379
 
 mybatis:
   #mapper配置文件
