--- a/tack-out/sky-take-out/sky-server/src/main/resources/application.yml
+++ b/tack-out/sky-take-out/sky-server/src/main/resources/application.yml
@@ -20,8 +20,8 @@ spring:
     username: root
     password: 123123123
   redis:
-    database: 0
-    password:
+    database: 10
+    #password:
     host: localhost
     port: 6379
 
