--- a/tack-out/mp-weixin/project.config.json
+++ b/tack-out/mp-weixin/project.config.json
@@ -1,9 +1,5 @@
 {
   "description": "项目配置文件，详见文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html",
-  "packOptions": {
-    "ignore": [],
-    "include": []
-  },
   "setting": {
     "urlCheck": false,
     "minified": true,
@@ -35,12 +31,15 @@
     "minifyWXML": true
   },
   "compileType": "miniprogram",
-  "libVersion": "2.24.2",
-  "appid": "wx2fb0c6e8eea5b635",
-  "projectname": "sky-take-out",
   "condition": {},
   "editorSetting": {
     "tabIndent": "insertSpaces",
     "tabSize": 2
-  }
+  },
+  "libVersion": "2.24.2",
+  "packOptions": {
+    "ignore": [],
+    "include": []
+  },
+  "appid": "wx803e79c1ffbc094e"
 }
