--- a/iceso/iceso-backend/pom.xml
+++ b/iceso/iceso-backend/pom.xml
@@ -12,9 +12,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.ice</groupId>
-    <artifactId>springboot-init</artifactId>
+    <artifactId>iceso-backend</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>springboot-init</name>
+    <name>iceso-backend</name>
     <properties>
         <java.version>1.8</java.version>
     </properties>
@@ -50,6 +50,12 @@
         <dependency>
             <groupId>org.springframework.session</groupId>
             <artifactId>spring-session-data-redis</artifactId>
+        </dependency>
+        <!--https://github.com/alibaba/canal/wiki/ClientExample-->
+        <dependency>
+            <groupId>com.alibaba.otter</groupId>
+            <artifactId>canal.client</artifactId>
+            <version>1.1.0</version>
         </dependency>
         <!-- elasticsearch-->
         <dependency>
